KPZ_Lab4_Console/KPZ_lab4/Sample2.atg
COMPILER Sample

CHARACTERS
	digit = '0'..'9'.
	letter = 'a'..'z'.
	bigletter = 'A'..'Z'.	
TOKENS
	ident = ( letter | bigletter | '_' ) { digit | letter | bigletter | '_' }.
	const = digit { digit } | digit { digit} '.' digit { digit }.
	bool = "==" | "<=" | ">=" | '>' | '<' | "!=".
	operationHigh = '/' | '*'.
	operationLow = '+' | '-'.
	if = "if".
	else = "else".
IGNORE '\t' + '\r' + '\n'
PRODUCTIONS
	Sample = if "(" X ")" ident "=" A ";" E.
	X = A bool A.
	E = [] | else ident "=" A ";".
	A = M A2.
	A2 = B | []. 
	B = operationLow B2.
	B2 = M B3.
	B3 = B | [].
	M = P M1.
	M1 = C | [].
	C = operationHigh C2.
	C2 = M | P C.
	P = "(" A ")" | U.
	U = ident | const.
END Sample.
